[gd_scene load_steps=6 format=3 uid="uid://cxkoy5v02xjkp"]

[ext_resource type="Script" uid="uid://ce83h6db1lxy4" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bn5kjamyp271a" path="res://enemy.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://w4dnugkccplm" path="res://player.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://c04b8i2afg6d8" path="res://hud.tscn" id="4_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, -0.009800183, 0, 0, 0, 0, 480.0147, 719.9902)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
enemyscene = ExtResource("2_0xm2m")

[node name="enemyspawntimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoretimer" type="Timer" parent="."]

[node name="starttimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="playposition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="enemypath" type="Path2D" parent="."]
rotation = 2.0417046e-05
curve = SubResource("Curve2D_0xm2m")

[node name="enemyspawnlocation" type="PathFollow2D" parent="enemypath"]
rotation = -2.0417046e-05

[node name="player" parent="." instance=ExtResource("3_h2yge")]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="timeout" from="enemyspawntimer" to="." method="_on_enemyspowntimer_timeout"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="starttimer" to="." method="_on_starttimer_timeout"]
[connection signal="hit" from="player" to="." method="gameover"]
[connection signal="startgame" from="HUD" to="." method="newgame"]
